# algorithm_collection

graph/bfs/: .appveyor.yml  CMakeLists.txt  appveyor.yml  bfs.cpp  bfs.hpp  run_ci.py
graph/bfs/doc/: Makefile  main.dot
graph/bfs/test/: main.cpp
graph/dfs/: CMakeLists.txt  dfs.cpp  dfs.hpp  run_ci.py
graph/dfs/test/: main.cpp
linear_solver/jacobi/: main.cpp  run.sh
number_theory/prime_factorisation/: CMakeLists.txt  prime_factorisation.cpp  prime_factorisation.hpp  run_ci.py
number_theory/prime_factorisation/test/: main.cpp
